# ELO

./: .gitignore  CMakeLists.txt  ELO.sln  ELO.vcxproj  ELO.vcxproj.filters  README.md  build.bat  gol.out  run.py  test.elo
core/: math.elo
core/libc/: cstring.elo  ctype.elo  stdio.elo  stdlib.elo
core/win32/: win32.elo
examples/: window_example.elo
ext/: stb_sprintf.h
ext/libtommath/libs/: tommath.lib
src/: array.h  ast_dump.cpp  ast_dump.h  auto_array.h  common.cpp  common.h  core.cpp  core.h  elo.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  path.cpp  path.h  semantic.cpp  semantic.h  string_map.cpp  string_map.h  types.h
src/base/: base_core.cpp  base_core.h  base_memory.cpp  base_memory.h  base_strings.cpp  base_strings.h
src/compiler/: OP.h  ast.cpp  ast.h  atom.cpp  atom.h  common.cpp  common.h  compiler_main.cpp  constant_value.cpp  constant_value.h  decl.cpp  decl.h  jb.h  lexer.cpp  lexer.h  llvm_backend.cpp  llvm_backend.h  parser.cpp  parser.h  report.cpp  report.h  resolve.cpp  resolve.h  resolve_.cpp  resolve_expr.cpp  resolve_stmt.cpp  source_file.cpp  source_file.h  token.h  types.cpp  types.h
src/llvm/Config/: config.h  llvm-config.h
src/os/: os.cpp  os.h
src/os/core/: os_core.cpp  os_core.h
src/os/core/win32/: os_core_win32.cpp  os_core_win32.h
src/os/gfx/win32/: os_gfx_win32.cpp
src/path/: path.cpp  path.h
tests/: basic.elo  codegen.elo  common.elo  enum.elo  fibonacci.elo  gol.elo  ifcase.elo  lexer.elo  main.elo  math.elo  stdio.elo  stdlib.elo  test.elo  tests.elo
